Make it docker ready
